After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749543 - rtpg726depay: fix input buffer memleak
rtpg726depay: fix input buffer memleak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-18 14:35 UTC by Nicola
Modified: 2015-05-18 16:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix memleak (991 bytes, patch)
2015-05-18 14:35 UTC, Nicola
committed Details | Review

Description Nicola 2015-05-18 14:35:34 UTC
Created attachment 303529 [details] [review]
fix memleak

each buffer is actually leaked
Comment 1 Tim-Philipp Müller 2015-05-18 16:46:25 UTC
commit 335afc982b6f7b98136115b045b236e03ff497a5
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Mon May 18 16:34:13 2015 +0200

    rtpg726depay: don't leak input buffer
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749543