rtpg726depay: don't leak input buffer

https://bugzilla.gnome.org/show_bug.cgi?id=749543